2017-10-14  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (glep-mode): Document the new mode.

2017-09-17  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el: New file. Mode for editing Gentoo Linux
	Enhancement Proposals that are written in reStructuredText.
	* Makefile (DISTFILES): Add glep-mode.el.

2017-09-15  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.38 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-04-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.37 released.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): XEmacs 21.4
	doesn't have delete-dups, use delete-duplicates instead.

	* Version 1.36 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Call regexp-opt
	without duplicates in its argument list.

2017-03-31  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-before-save):
	Call ebuild-mode-update-copyright only once per buffer.

2017-03-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.35 released.

2017-03-08  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	Account for news item format 2.0.
	(gentoo-newsitem-format-list): New variable.

2017-03-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.34 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-03-04  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-eapi-list): New custom variable.
	(ebuild-mode-insert-skeleton): Use it in a completing-read.

	* ebuild-mode.el (ebuild-mode-protocols-homepage)
	(ebuild-mode-protocols-src_uri): New variables.
	(ebuild-mode-insert-skeleton): Add https:// to completions
	for HOMEPAGE and SRC_URI.

	* ebuild-mode.el (ebuild-mode-update-copyright): Modify the buffer
	only if necessary. Warn about equal first and last year.

2017-02-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.33 released.
