@@ -1,5 +1,7 @@
 2017-10-14  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
+
 	* ebuild-mode.texi (glep-mode): Document the new mode.
 
 2017-09-17  Ulrich Müller  <ulm@gentoo.org>
